--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ VUE_APP_CURRENTMODE = 'dev'
 VUE_APP_URL = "development"
 VUE_APP_OUTPUTDIR = 'dist/dev'
 VUE_APP_BASEURL = '/dist/'
-VUE_APP_APIBASE='https://test.chegongyun.com'
+VUE_APP_APIBASE='http://test.chegongyun.com'
