--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ VUE_APP_CURRENTMODE = 'build'
 VUE_APP_URL = "production"
 VUE_APP_OUTPUTDIR = 'dist/build'
 VUE_APP_BASEURL = '/'
-VUE_APP_APIBASE='https://web.chegong.com'
+VUE_APP_APIBASE='https://xxx.xxxx.com'
