--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
+    "autoprefixer": "^9.4.10",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
@@ -26,6 +27,7 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "postcss-px2rem": "^0.3.0",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-axios": "0.0.4",
